# australian-shopping-checker

./: .env.example  .gitignore  README.md  RETRY_LOGIC.md  alternative_products_export.csv  batch_migrate.py  cli.py  direct_migrate.py  export_sqlite_data.py  import_data.sql  migrate_data.py  migrate_via_api.py  price_history_export.csv  proper_migrate.py  pyproject.toml  railway.toml  requirements.txt  sale-checker  simple_migrate.py  simple_server.py  test_admin_api.py  test_ui_fix.html
.claude/: settings.local.json
app/: main.py  models.py  settings.py
app/adapters/: base.py  playwright_fallback.py  woolworths.py
app/services/: sale_checker.py
app/utils/: auth.py  cache.py  daily_updates.py  data_validation.py  database.py  database_pg.py  db_config.py  dummy_data.py  error_handling.py  graceful_degradation.py  health_checks.py  matching.py  metrics.py  predictions.py  rate_limiting.py  validation.py
static/: app.js  debug_login.html  index.html  modern.css  modern.html  modern.js  style.css
tests/: test_adapter_caching.py  test_alternatives_database.py  test_alternatives_price_logging.py  test_api.py  test_cache.py  test_cli.py  test_matching.py  test_playwright_fallback.py  test_validation.py  test_woolworths.py
